<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ChartSpecsActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        app:tabSelectedTextColor="@color/black"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_tab_layout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_daily" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_text_label_weekly" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_monthly" />
    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_marginTop="65dp"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:background="@drawable/round_corner_backgroun_chart_specs">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_backgroun_chart_specs"
                    android:src="@drawable/summary_icon"/>

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="50dp"
                    android:textSize="20dp"
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_summary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="60dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="80dp"
                    android:id="@+id/chartSpecActivitySummaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/round_corner_backgroun_chart_specs">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_backgroun_chart_specs"
                    android:src="@drawable/summary_second_icon"/>


                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="50dp"
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_pie_chart" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="60dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/round_corner_backgroun_chart_specs">

                <TextView
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info" />

                <ImageView
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/more_info_icon"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
